--- a/packages/def_tmpl_blog/template/demo.html
+++ b/packages/def_tmpl_blog/template/demo.html
@@ -197,11 +197,11 @@
         <footer>
             <div class="row">
                 <div class="col-lg-10">
-                    <p>Copyright &copy; Ваш сайт 2015</p>
+                    <p>Copyright &copy; <a href="http://piccolo.tk">piccolo.tk</a> 2015</p>
                 </div>
                 <!-- /.col-lg-12 -->
 				<div class="col-lg-2">
-                    <p>Работает на CMS Piccolo</p>
+                    <p>Работает на <a href="http://piccolo.tk">CMS Piccolo</a></p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
