--- a/packages/def_tmpl_blog/template/index.html
+++ b/packages/def_tmpl_blog/template/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Простой блог - Start Bootstrap Template</title>
+    <title>Простой блог - <content type="page" name="title"/></title>
 
     <!-- Bootstrap Core CSS -->
     <link href="%tmpl_root%/css/bootstrap.min.css" rel="stylesheet">
@@ -64,7 +64,8 @@
 
             <!-- Blog Entries Column -->
             <div class="col-md-8">
-                [content]
+                <content type="breadcrumbs"/>
+                <content type="page" name="content"/>
             </div>
 
             <!-- Blog Sidebar Widgets Column -->
@@ -87,11 +88,11 @@
         <footer>
             <div class="row">
                 <div class="col-lg-10">
-                    <p>Copyright &copy; Ваш сайт 2015</p>
+                    <p>Copyright &copy; <a href="http://piccolo.tk">piccolo.tk</a> 2015</p>
                 </div>
                 <!-- /.col-lg-12 -->
 				<div class="col-lg-2">
-                    <p>Работает на CMS Piccolo</p>
+                    <p>Работает на <a href="http://piccolo.tk">CMS Piccolo</a></p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
