Мелкие фиксы и избавление от зависимостей
Из более-менее заметного: теперь piccolo_comments не входит в
зависимости.
Начало процесса перехода на "гибкие шаблоны". (подготовка к placefor)

--- a/packages/def_tmpl_blog/template/scripts/piccolo_blog/post_page.html
+++ b/packages/def_tmpl_blog/template/scripts/piccolo_blog/post_page.html
@@ -26,7 +26,7 @@
 
     <!-- Blog Comments -->
 
-    <content type="comments" pageID="news_[id]"/>
+    <content type="comments" pageID="news_[id]" lc_title="Новости - [title]" lc_link="%url%"/>
     
     <!-- Comments Form -->
 <!--    <div class="well">
