--- a/packages/def_tmpl_blog/template/scripts/piccolo_comments/styles/default.html
+++ b/packages/def_tmpl_blog/template/scripts/piccolo_comments/styles/default.html
@@ -6,6 +6,7 @@
             <input type="text" name="name" placeholder="Ваше имя" class="form-control"/><br/>
             <textarea placeholder="Комментарий" name="comment" class="form-control" rows="3"></textarea>
         </div>
+        [captcha]<br/>
         <button type="submit" class="btn btn-primary">Отправить</button>
     </form>
 </div>
