--- a/packages/def_tmpl_blog/template/index.html
+++ b/packages/def_tmpl_blog/template/index.html
@@ -17,6 +17,19 @@
     <!-- Custom CSS -->
     <link href="%tmpl_root%/css/blog-home.css" rel="stylesheet">
 
+    
+        <!-- BS tooltips -->
+        <script type="text/javascript">
+
+            $(document).ready(function () {
+
+                $('[data-toggle="tooltip"]').tooltip();
+
+            });
+
+        </script>
+
+    
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
