--- a/packages/def_tmpl_blog/template/scripts/piccolo_blog/blog_post.html
+++ b/packages/def_tmpl_blog/template/scripts/piccolo_blog/blog_post.html
@@ -5,8 +5,8 @@
 <p class="lead">
     опубликовал <a href="index.php">[author]</a>
 </p>
-<!--<p><span class="glyphicon glyphicon-time"></span> [fdate]</p>
-<hr>-->
+<p><span class="glyphicon glyphicon-time"></span> [date]</p>
+<hr>
 <!--<img class="img-responsive" src="http://placehold.it/900x300" alt="">
 <hr>-->
 <p>[content]</p>
